# argser

./: .coveragerc  .flake8  .gitignore  CHANGELOG.md  Makefile  README.md  args_parse.py  argser.py  arse.py  cli.sh  conftest.py  pyproject.toml  pytest.ini  requirements.txt  s  setup.py  tests.py
.github/workflows/: build.yml  main.yml  pythonpackage.yml  test-publish.yml
argser/: __init__.py  __main__.py  consts.py  display.py  docstring.py  exceptions.py  fields.py  formatters.py  logging.py  parse_func.py  parser.py  utils.py
docs/: Makefile  requirements.txt
docs/source/: conf.py  examples.rst  index.rst  installation.rst
docs/source/_static/: copybutton.js
docs/source/_templates/: layout.html
docs/source/modules/: argser.display.rst  argser.fields.rst  argser.formatters.rst  argser.parse_func.rst  argser.parser.rst  argser.rst  argser.utils.rst
tests/: conftest.py  test_display.py  test_docstring.py  test_fields.py  test_parse_func.py  test_parser.py  test_utils.py  utils.py
